--- a/contact.htm
+++ b/contact.htm
@@ -1,33 +1,35 @@
+<!DOCTYPE html>
 <html>
-    <!DOCTYPE html>
+    
     <link rel="stylesheet" href="style.css">
     <title>The Red Mountain - Contact</title>
-    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center"></a></header>
-    <br>
+    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" id="logo"></a></header>
+    <!--Need to find a way to keep the image the same throughout the website-->
+
         <ul class="breadcrumb">
             <li>
-                <a href="about.htm"><img src="images/button_about-us.png"></a>
+                <a href="about.htm"><img src="images/button_about-us.png" alt="About Us button"></a>
             </li>
             <li>
-                <a href="merch.htm"><img src="images/button_merch.png"></a>
+                <a href="merch.htm"><img src="images/button_merch.png" alt="Merchandise button"></a>
             </li>
             <li>
-                <a href="listennow.htm"><img src="images/button_listen-now.png"></a>
+                <a href="listennow.htm"><img src="images/button_listen-now.png" alt="Listen Now button"></a>
             </li>    
             <li>
-                <a href="upcoming.htm"><img src="images/button_upcoming-shows.png"></a>
+                <a href="upcoming.htm"><img src="images/button_upcoming-shows.png" alt="Uppcoming Shows button"></a>
             </li>
             <li>
-                <a href="contact.htm"><img src="images/button_contact-us.png" ></a>
+                <a href="contact.htm"><img src="images/button_contact-us.png" alt="Contact Us button"></a>
             </li>
         </ul>
     <body>
-        <strong>Email:</strong> theredmountainxroads@gmail.com <br>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=theredmountainxroads@gmail.com" target="_blank"><img src="images/email.png" class="contactimg"></a> <!--theredmountainxroads@gmail.com--> 
 
-        <a href="https://www.facebook.com/THEREDMOUNTAIN" target="_blank"><strong>Facebook</strong></a><br>
+        <a href="https://www.facebook.com/THEREDMOUNTAIN" target="_blank"><img src="images/facebook.png" class="contactimg"></a>
 
-        <a href="https://www.instagram.com/theredmtnxroads/" target="_blank"><strong>Instagram</strong></a><br>
+        <a href="https://www.instagram.com/theredmtnxroads/" target="_blank"><img src="images/Instagram.png" class="contactimg"></a>
             
-        <a href="https://twitter.com/THEREDMOUNTAIN1" target="_blank"><strong>Twitter</strong></a><br>
+        <a href="https://twitter.com/THEREDMOUNTAIN1" target="_blank"><img src="images/twitter.png" class="contactimg"></a>
     </body>
 </html>
