--- a/upcoming.htm
+++ b/upcoming.htm
@@ -1,29 +1,31 @@
+<!DOCTYPE html>
 <html>
-    <!DOCTYPE html>
+    
     <link rel="stylesheet" href="style.css">
     <title>The Red Mountain - Upcoming Shows</title>
-    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center"></a></header>
-    <br>
+    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" id="logo"></a></header>
+    <!--Need to find a way to keep the image the same throughout the website-->
+
         <ul class="breadcrumb">
             <li>
-                <a href="about.htm"><img src="images/button_about-us.png"></a>
+                <a href="about.htm"><img src="images/button_about-us.png" alt="About Us button"></a>
             </li>
             <li>
-                <a href="merch.htm"><img src="images/button_merch.png"></a>
+                <a href="merch.htm"><img src="images/button_merch.png" alt="Merchandise button"></a>
             </li>
             <li>
-                <a href="listennow.htm"><img src="images/button_listen-now.png"></a>
+                <a href="listennow.htm"><img src="images/button_listen-now.png" alt="Listen Now button"></a>
             </li>    
             <li>
-                <a href="upcoming.htm"><img src="images/button_upcoming-shows.png"></a>
+                <a href="upcoming.htm"><img src="images/button_upcoming-shows.png" alt="Uppcoming Shows button"></a>
             </li>
             <li>
-                <a href="contact.htm"><img src="images/button_contact-us.png" ></a>
+                <a href="contact.htm"><img src="images/button_contact-us.png" alt="Contact Us button"></a>
             </li>
         </ul>
     <body>
         <br>
-        <img src="images/show.jpg" class="center2"><br>
-        Want to book The Red Mountain? <a href="contact.htm">Contact Us</a>
+        <img src="images/show.jpg" class="center2" alt="poster for upcoming shows"><br>
+        <p>Want to book The Red Mountain <strong class="otherfont">?</strong> <a href="contact.htm">Contact Us</a></p>
     </body>
     </html>
