--- a/index.htm
+++ b/index.htm
@@ -1,30 +1,34 @@
+<!DOCTYPE html>
 <html>
-    <!DOCTYPE html>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>The Red Mountain - Home</title>
-    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center"></a></header>
+    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" id="logo"></a></header>
     <!--Need to find a way to keep the image the same throughout the website-->
-    <br>
+ 
         <ul class="breadcrumb">
             <li>
-                <a href="about.htm"><img src="images/button_about-us.png"></a>
+                <a href="about.htm"><img src="images/button_about-us.png" alt="About Us button"></a>
             </li>
             <li>
-                <a href="merch.htm"><img src="images/button_merch.png"></a>
+                <a href="merch.htm"><img src="images/button_merch.png" alt="Merchandise button"></a>
             </li>
             <li>
-                <a href="listennow.htm"><img src="images/button_listen-now.png"></a>
+                <a href="listennow.htm"><img src="images/button_listen-now.png" alt="Listen Now button"></a>
             </li>    
             <li>
-                <a href="upcoming.htm"><img src="images/button_upcoming-shows.png"></a>
+                <a href="upcoming.htm"><img src="images/button_upcoming-shows.png" alt="Uppcoming Shows button"></a>
             </li>
             <li>
-                <a href="contact.htm"><img src="images/button_contact-us.png" ></a>
+                <a href="contact.htm"><img src="images/button_contact-us.png" alt="Contact Us button"></a>
             </li>
         </ul>
     <body>
-        
+        <p class="center">Welcome to THE RED MOUNTAIN website, learn more about the band  <a href="about.htm" target="_blank">here.</a></p>
+        <video  width="885" height="498" controls autoplay class="videocenter" >
+            <source src="video/yt5s.io-THE RED MOUNTAIN - THE RED MOUNTAIN.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
     </body>
 </html>
