--- a/about.htm
+++ b/about.htm
@@ -1,29 +1,31 @@
+ <!DOCTYPE html>
  <html>
-    <!DOCTYPE html>
+    
     <link rel="stylesheet" href="style.css">
     <title>The Red Mountain - About</title>
-    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center"></a></header>
-    <br>
-    <ul class="breadcrumb">
-        <li>
-            <a href="about.htm"><img src="images/button_about-us.png"></a>
-        </li>
-        <li>
-            <a href="merch.htm"><img src="images/button_merch.png"></a>
-        </li>
-        <li>
-            <a href="listennow.htm"><img src="images/button_listen-now.png"></a>
-        </li>    
-        <li>
-            <a href="upcoming.htm"><img src="images/button_upcoming-shows.png"></a>
-        </li>
-        <li>
-            <a href="contact.htm"><img src="images/button_contact-us.png" ></a>
-        </li>
-    </ul>
+    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" id="logo"></a></header>
+    <!--Need to find a way to keep the image the same throughout the website-->
+
+        <ul class="breadcrumb">
+            <li>
+                <a href="about.htm"><img src="images/button_about-us.png" alt="About Us button"></a>
+            </li>
+            <li>
+                <a href="merch.htm"><img src="images/button_merch.png" alt="Merchandise button"></a>
+            </li>
+            <li>
+                <a href="listennow.htm"><img src="images/button_listen-now.png" alt="Listen Now button"></a>
+            </li>    
+            <li>
+                <a href="upcoming.htm"><img src="images/button_upcoming-shows.png" alt="Uppcoming Shows button"></a>
+            </li>
+            <li>
+                <a href="contact.htm"><img src="images/button_contact-us.png" alt="Contact Us button"></a>
+            </li>
+        </ul>
     <body>
-        <p class="center">Formed in a friend's basement in 2015, THE RED MOUNTAIN is a visceral mix of heavy metal, hard rock, and live performance pieces out of northeast Mississippi (Corinth).<br>
-             The band is comprised of Jody "Goph" Holland on guitar, Cody Cromeans on bass, Adam Smith on drums, and Dave Frost on vocals.</p>
-             <img src="images/group.jpg" class="center" id="group">
+        <p class="about">Formed in a friend's basement in <strong class="otherfont">2015</strong>, THE RED MOUNTAIN is a visceral mix of heavy metal, hard rock, and live performance pieces out of northeast Mississippi (Corinth).</p>
+             <img src="images/group.jpg" class="center" id="group" alt="Group photo of The Red Mountain band">
+            <p class="about">The band is comprised of: <br> Jody "Goph" Holland on guitar, Cody Cromeans on bass, Adam Smith on drums, and Dave Frost on vocals.</p>
     </body>
 </html>
