--- a/about.htm
+++ b/about.htm
@@ -3,7 +3,7 @@
     
     <link rel="stylesheet" href="style.css">
     <title>The Red Mountain - About</title>
-    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" id="logo"></a></header>
+    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" class="logo"></a></header>
     <!--Need to find a way to keep the image the same throughout the website-->
 
         <ul class="breadcrumb">
@@ -24,8 +24,8 @@
             </li>
         </ul>
     <body>
-        <p class="about">Formed in a friend's basement in <strong class="otherfont">2015</strong>, THE RED MOUNTAIN is a visceral mix of heavy metal, hard rock, and live performance pieces out of northeast Mississippi (Corinth).</p>
+        <p class="centertext">Formed in a friend's basement in <strong class="altfont">2015</strong>, THE RED MOUNTAIN is a visceral mix of heavy metal, hard rock, and live performance pieces out of northeast Mississippi (Corinth).</p>
              <img src="images/group.jpg" class="center" id="group" alt="Group photo of The Red Mountain band">
-            <p class="about">The band is comprised of: <br> Jody "Goph" Holland on guitar, Cody Cromeans on bass, Adam Smith on drums, and Dave Frost on vocals.</p>
+            <p class="centertext">The band is comprised of: <br> Jody "Goph" Holland on guitar, Cody Cromeans on bass, Adam Smith on drums, and Dave Frost on vocals.</p>
     </body>
 </html>
