--- a/contact.htm
+++ b/contact.htm
@@ -3,7 +3,7 @@
     
     <link rel="stylesheet" href="style.css">
     <title>The Red Mountain - Contact</title>
-    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" id="logo"></a></header>
+    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" class="logo"></a></header>
     <!--Need to find a way to keep the image the same throughout the website-->
 
         <ul class="breadcrumb">
@@ -24,6 +24,8 @@
             </li>
         </ul>
     <body>
+        <p class="centertext">Follow Us<strong class="altfont">!</strong> <br> On you Favorite platform below<strong class="altfont">!</strong></p>
+
         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=theredmountainxroads@gmail.com" target="_blank"><img src="images/email.png" class="contactimg"></a> <!--theredmountainxroads@gmail.com--> 
 
         <a href="https://www.facebook.com/THEREDMOUNTAIN" target="_blank"><img src="images/facebook.png" class="contactimg"></a>
@@ -31,5 +33,7 @@
         <a href="https://www.instagram.com/theredmtnxroads/" target="_blank"><img src="images/Instagram.png" class="contactimg"></a>
             
         <a href="https://twitter.com/THEREDMOUNTAIN1" target="_blank"><img src="images/twitter.png" class="contactimg"></a>
+
+        <p class="centertext">The above links will send you to external websites</p>
     </body>
 </html>
