--- a/merch.htm
+++ b/merch.htm
@@ -2,7 +2,7 @@
 <html>
     <link rel="stylesheet" href="style.css">
     <title>The Red Mountain - Merch</title>
-    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" id="logo"></a></header>
+    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" class="logo"></a></header>
     <!--Need to find a way to keep the image the same throughout the website-->
 
         <ul class="breadcrumb">
@@ -49,7 +49,8 @@
         </tr>
       </table>
       <br>
-        <a href="https://www.facebook.com/THEREDMOUNTAIN/shop/?referral_code=page_shop_tab&preview=1" target="_blank" class="center"><img src="images/button_buy-here.png"></a>
+        <a href="https://www.facebook.com/THEREDMOUNTAIN/shop/?referral_code=page_shop_tab&preview=1" target="_blank" class="center"><img src="images/button_buy-here.png" alt="buy button"></a>
+        <p class="centertext">The link above will send you to a external website</p>
       <br>
       </body>
 </html>
