--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>The Red Mountain - Home</title>
-    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" id="logo"></a></header>
+    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" class="logo"></a></header>
     <!--Need to find a way to keep the image the same throughout the website-->
  
         <ul class="breadcrumb">
@@ -25,8 +25,8 @@
             </li>
         </ul>
     <body>
-        <p class="center">Welcome to THE RED MOUNTAIN website, learn more about the band  <a href="about.htm" target="_blank">here.</a></p>
-        <video  width="885" height="498" controls autoplay class="videocenter" >
+        <p class="centertext">Welcome to THE RED MOUNTAIN website<br> learn more about the band  <a href="about.htm" target="_blank">here.</a></p>
+        <video class="videocenter" width="885" height="498" controls autoplay >
             <source src="video/yt5s.io-THE RED MOUNTAIN - THE RED MOUNTAIN.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
