--- a/upcoming.htm
+++ b/upcoming.htm
@@ -3,7 +3,7 @@
     
     <link rel="stylesheet" href="style.css">
     <title>The Red Mountain - Upcoming Shows</title>
-    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" id="logo"></a></header>
+    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" class="logo"></a></header>
     <!--Need to find a way to keep the image the same throughout the website-->
 
         <ul class="breadcrumb">
@@ -26,6 +26,6 @@
     <body>
         <br>
         <img src="images/show.jpg" class="center2" alt="poster for upcoming shows"><br>
-        <p>Want to book The Red Mountain <strong class="otherfont">?</strong> <a href="contact.htm">Contact Us</a></p>
+        <p>Want to book The Red Mountain <strong class="altfont">?</strong> <a href="contact.htm">Contact Us</a></p>
     </body>
     </html>
