--- a/contact.htm
+++ b/contact.htm
@@ -30,7 +30,7 @@
 
         <a href="https://www.facebook.com/THEREDMOUNTAIN" target="_blank"><img src="images/facebook.png" class="contactimg"></a>
 
-        <a href="https://www.instagram.com/theredmtnxroads/" target="_blank"><img src="images/Instagram.png" class="contactimg"></a>
+        <a href="https://www.instagram.com/theredmtnxroads/" target="_blank"><img src="images/instagram.png" class="contactimg"></a>
             
         <a href="https://twitter.com/THEREDMOUNTAIN1" target="_blank"><img src="images/twitter.png" class="contactimg"></a>
 
