--- a/contact.htm
+++ b/contact.htm
@@ -24,7 +24,7 @@
             </li>
         </ul>
     <body>
-        <p class="centertext">Follow Us<strong class="altfont">!</strong> <br> On you Favorite platform below<strong class="altfont">!</strong></p>
+        <p class="centertext">Follow Us<strong class="altfont">!</strong> <br> On you Favorite platform below</p>
 
         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=theredmountainxroads@gmail.com" target="_blank"><img src="images/email.png" class="contactimg"></a> <!--theredmountainxroads@gmail.com--> 
 
