--- a/merch.htm
+++ b/merch.htm
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="style.css">
-    <title>The Red Mountain - Merch</title>
-    <header><a  href="index.htm"><img src="images/trans_logo_crop.png" class="center" class="logo"></a></header>
-    <!--Need to find a way to keep the image the same throughout the website-->
 
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <title>The Red Mountain - Home</title>
+    
+    <header>
+        <a  href="index.htm"><img src="images/trans_logo_crop.png" class="center"></a>
+    </header>
+    <!--Need to find a way to keep the image the same throughout the website-->
+ 
         <ul class="breadcrumb">
-            <li>
-                <a href="about.htm"><img src="images/button_about-us.png" alt="About Us button"></a>
-            </li>
-            <li>
-                <a href="merch.htm"><img src="images/button_merch.png" alt="Merchandise button"></a>
-            </li>
-            <li>
-                <a href="listennow.htm"><img src="images/button_listen-now.png" alt="Listen Now button"></a>
-            </li>    
-            <li>
-                <a href="upcoming.htm"><img src="images/button_upcoming-shows.png" alt="Uppcoming Shows button"></a>
-            </li>
-            <li>
-                <a href="contact.htm"><img src="images/button_contact-us.png" alt="Contact Us button"></a>
-            </li>
+            <li><a href="about.htm"><img src="images/button_about-us.png" alt="About Us button"></a></li>
+            <li><a href="merch.htm"><img src="images/button_merch.png" alt="Merchandise button"></a></li>
+            <li><a href="listennow.htm"><img src="images/button_listen-now.png" alt="Listen Now button"></a></li>    
+            <li><a href="upcoming.htm"><img src="images/button_upcoming-shows.png" alt="Uppcoming Shows button"></a></li>
+            <li><a href="contact.htm"><img src="images/button_contact-us.png" alt="Contact Us button"></a></li>
         </ul>
-    <body>
 
       <table class="tablecenter">
         <tr>
@@ -31,7 +25,6 @@
         <tr>
           <td><img src="images/front_shirt.jpg" class="merchimg" alt="Front of The Red Mountain T-Shirt" width="500px"></td>
           <td><img src="images/back_shirt.jpg" class="merchimg" alt="Back of The Red Mountain T-Shirt" width="500px"></td>
-          
         </tr>
         <tr>
           <td colspan="2">The Red Mountain Snapback Hat</td>
@@ -42,7 +35,6 @@
         </tr>
         <tr>
           <td colspan="2">The Red Mountain Koozie</td>
-          <td></td>
         </tr>
         <tr>
           <td colspan="2"><img src="images/r-can_holder.jpg" class="merchimg" alt="Red Koozie" width="500px" class="tableimg"><img src="images/b-can_holder.jpg" alt="Black koozie" width="500px" height="282px" ></td>
