--- a/merch.htm
+++ b/merch.htm
@@ -42,7 +42,7 @@
       </table>
       <br>
         <a href="https://www.facebook.com/THEREDMOUNTAIN/shop/?referral_code=page_shop_tab&preview=1" target="_blank" class="center"><img src="images/button_buy-here.png" alt="buy button"></a>
-        <p class="centertext">The link above will send you to a external website</p>
+        <p class="centertext">The above link will send you to a external website</p>
       <br>
       </body>
 </html>
