--- a/about.htm
+++ b/about.htm
@@ -6,7 +6,7 @@
     <title>The Red Mountain - Home</title>
     
     <header>
-        <a  href="index.htm"><img src="images/trans_logo_crop.png" class="center"></a>
+        <a  href="index.htm"><img src="images/trans_logo_crop.png" class="logo"></a>
     </header>
     <!--Need to find a way to keep the image the same throughout the website-->
  
@@ -20,7 +20,7 @@
         
     <body>
         <p class="centertext">Formed in a friend's basement in <strong class="altfont">2015</strong>, THE RED MOUNTAIN is a visceral mix of heavy metal, hard rock, and live performance pieces out of northeast Mississippi (Corinth).</p>
-             <img src="images/group.jpg" class="center" id="group" alt="Group photo of The Red Mountain band">
+             <img src="images/group.jpg" id="group" alt="Group photo of The Red Mountain band">
             <p class="centertext">The band is comprised of: <br> Jody "Goph" Holland on guitar, Cody Cromeans on bass, Adam Smith on drums, and Dave Frost on vocals.</p>
     </body>
 </html>
