--- a/contact.htm
+++ b/contact.htm
@@ -6,7 +6,7 @@
     <title>The Red Mountain - Home</title>
     
     <header>
-        <a  href="index.htm"><img src="images/trans_logo_crop.png" class="center"></a>
+        <a  href="index.htm"><img src="images/trans_logo_crop.png" class="logo"></a>
     </header>
     <!--Need to find a way to keep the image the same throughout the website-->
  
@@ -19,7 +19,7 @@
         </ul>
         
     <body>
-        <p class="centertext">Follow Us<strong class="altfont">!</strong> <br> On you Favorite platform below<strong class="altfont">!</strong></p>
+        <p class="centertext">Follow Us<strong class="altfont">!</strong> <br> On you Favorite platform below</p>
 
         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=theredmountainxroads@gmail.com" target="_blank"><img src="images/email.png" class="contactimg"></a> <!--theredmountainxroads@gmail.com--> 
 
