--- a/merch.htm
+++ b/merch.htm
@@ -6,7 +6,7 @@
     <title>The Red Mountain - Home</title>
     
     <header>
-        <a  href="index.htm"><img src="images/trans_logo_crop.png" class="center"></a>
+        <a  href="index.htm"><img src="images/trans_logo_crop.png" class="logo"></a>
     </header>
     <!--Need to find a way to keep the image the same throughout the website-->
  
@@ -41,7 +41,7 @@
         </tr>
       </table>
       <br>
-        <a href="https://www.facebook.com/THEREDMOUNTAIN/shop/?referral_code=page_shop_tab&preview=1" target="_blank" class="center"><img src="images/button_buy-here.png" alt="buy button"></a>
+        <a href="https://www.facebook.com/THEREDMOUNTAIN/shop/?referral_code=page_shop_tab&preview=1" target="_blank" class="centerbuy"><img src="images/button_buy-here.png" alt="buy button"></a>
         <p class="centertext">The above link will send you to a external website</p>
       <br>
       </body>
