--- a/upcoming.htm
+++ b/upcoming.htm
@@ -6,7 +6,7 @@
     <title>The Red Mountain - Home</title>
     
     <header>
-        <a  href="index.htm"><img src="images/trans_logo_crop.png" class="center"></a>
+        <a  href="index.htm"><img src="images/trans_logo_crop.png" class="logo"></a>
     </header>
     <!--Need to find a way to keep the image the same throughout the website-->
  
