--- a/merch.htm
+++ b/merch.htm
@@ -7,6 +7,7 @@
     
     <header>
         <a  href="index.htm"><img src="images/trans_logo_crop.png" class="logo"></a>
+        
     </header>
     <!--Need to find a way to keep the image the same throughout the website-->
  
@@ -18,7 +19,7 @@
             <li><a href="contact.htm"><img src="images/button_contact-us.png" alt="Contact Us button"></a></li>
         </ul>
 
-      <table class="tablecenter">
+      <table class="table">
         <tr>
           <td colspan="2">The Red Mountain T-shirt</td>
         </tr>
@@ -37,7 +38,7 @@
           <td colspan="2">The Red Mountain Koozie</td>
         </tr>
         <tr>
-          <td colspan="2"><img src="images/r-can_holder.jpg" class="merchimg" alt="Red Koozie" width="500px" class="tableimg"><img src="images/b-can_holder.jpg" alt="Black koozie" width="500px" height="282px" ></td>
+          <td colspan="2"><img src="images/r-can_holder.jpg" class="merchimg" alt="Red Koozie" width="500px" class="table"><img src="images/b-can_holder.jpg" alt="Black koozie" width="500px" height="282px" ></td>
         </tr>
       </table>
       <br>
