--- a/merch.htm
+++ b/merch.htm
@@ -42,7 +42,7 @@
         </tr>
       </table>
       <br>
-        <a href="https://www.facebook.com/THEREDMOUNTAIN/shop/?referral_code=page_shop_tab&preview=1" target="_blank" class="centerbuy"><img src="images/button_buy-here.png" alt="buy button"></a>
+        <a href="https://www.facebook.com/THEREDMOUNTAIN/shop/?referral_code=page_shop_tab&preview=1" target="_blank" id="buy" class="center"><img src="images/button_buy-here.png" alt="buy button"></a>
         <p class="centertext">The above link will send you to a external website</p>
       <br>
       </body>
