--- a/upcoming.htm
+++ b/upcoming.htm
@@ -21,7 +21,7 @@
         
     <body>
         <br>
-        <img src="images/show.jpg" id="poster" alt="poster for upcoming shows"><br>
+        <img src="images/show.jpg" id="poster" class="center" alt="poster for upcoming shows"><br>
         <p>Want to book The Red Mountain <strong class="altfont">?</strong> <a href="contact.htm">Contact Us</a></p>
     </body>
     </html>
