--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
     <body>
         <p class="centertext">Welcome to THE RED MOUNTAIN website<br> learn more about the band  <a href="about.htm" target="_blank">here.</a></p>
         
-        <video id="videocenter" width="885" height="498" controls autoplay >
+        <video class="center" width="885" height="498" controls autoplay >
             <source src="video/yt5s.io-THE RED MOUNTAIN - THE RED MOUNTAIN.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
