--- a/listennow.htm
+++ b/listennow.htm
@@ -20,7 +20,7 @@
         
     <body>
         <p class="centertext">Listen to our newest album "Alpha"<br> now on most music services</p>
-        <img src="images/alpha_cover.png" id="cover"><br>
+        <img src="images/alpha_cover.png" id="cover" class="center"><br>
 
         <a href="https://youtube.com/playlist?list=OLAK5uy_k-YSX440fdC1b7QgeS6Sa9hrtWHHN-dw0" target="_blank"><img src="images/youtube.png" class="musicimg" alt="YouTube music link"></a>
 
