--- a/contact.htm
+++ b/contact.htm
@@ -18,7 +18,7 @@
         </ul>
         
     <body>
-        <p class="centertext">Follow Us<strong class="altfont">!</strong> <br> On you Favorite platform below</p>
+        <p class="killerfont">Follow or Contact Us<strong class="norsefont">!</strong> <br> On you Favorite platform below</p>
 
         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=theredmountainxroads@gmail.com" target="_blank"><img src="images/email.png" class="contactimg"></a> <!--theredmountainxroads@gmail.com--> 
 
@@ -28,6 +28,6 @@
             
         <a href="https://twitter.com/THEREDMOUNTAIN1" target="_blank"><img src="images/twitter.png" class="contactimg"></a>
 
-        <p class="centertext">The above links will send you to external websites</p>
+        <p class="warning">External Links above</p>
     </body>
 </html>
