--- a/listennow.htm
+++ b/listennow.htm
@@ -18,7 +18,7 @@
         </ul>
         
     <body>
-        <p class="centertext">Listen to our newest album "Alpha"<br> now on most music services</p>
+        <p class="killerfont">Listen to our newest album "Alpha"<br> now on most music services</p>
         <img src="images/alpha_cover.png" id="cover" class="center"><br>
 
         <a href="https://youtube.com/playlist?list=OLAK5uy_k-YSX440fdC1b7QgeS6Sa9hrtWHHN-dw0" target="_blank"><img src="images/youtube.png" class="musicimg" alt="YouTube music link"></a>
@@ -35,6 +35,6 @@
 
         <a href="https://www.iheart.com/artist/the-red-mountain-33260879/albums/alpha-169247169/?autoplay=true" target="_blank"><img src="images/iheart.png" class="musicimg" alt="Iheart radio music link"></a>
 
-        <p class="centertext">The above links will send you to external websites</p>
+        <p class="warning">External Links above</p>
     </body>
 </html>
