--- a/about.htm
+++ b/about.htm
@@ -18,8 +18,8 @@
         </ul>
         
     <body>
-        <p class="centertext">Formed in a friend's basement in <strong class="altfont">2015</strong>, THE RED MOUNTAIN is a visceral mix of heavy metal, hard rock, and live performance pieces out of northeast Mississippi (Corinth).</p>
+        <p class="killerfont">Formed in a friend's basement in <strong class="norsefont">2015</strong>, THE RED MOUNTAIN is a visceral mix of heavy metal, hard rock, and live performance pieces out of northeast Mississippi (Corinth).</p>
              <img src="images/group.jpg" id="group" class="center" alt="Group photo of The Red Mountain band">
-            <p class="centertext">The band is comprised of: <br> Jody "Goph" Holland on guitar, Cody Cromeans on bass, Adam Smith on drums, and Dave Frost on vocals.</p>
+            <p class="killerfont">The band is comprised of: <br> Jody "Goph" Holland on guitar, Cody Cromeans on bass, Adam Smith on drums, and Dave Frost on vocals.</p>
     </body>
 </html>
