--- a/index.htm
+++ b/index.htm
@@ -18,9 +18,8 @@
         </ul>
         
     <body>
-        <p class="centertext">Welcome to THE RED MOUNTAIN website<br> learn more about the band  <a href="about.htm" target="_blank">here.</a></p>
-        
-        <video class="center" width="885" height="498" controls autoplay >
+        <p class="killerfont">Welcome to THE RED MOUNTAIN website<br> learn more about the band  <a href="about.htm">here.</a></p>
+        <video class="center" width="885" height="498" controls autoplay muted>
             <source src="video/yt5s.io-THE RED MOUNTAIN - THE RED MOUNTAIN.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
