--- a/merch.htm
+++ b/merch.htm
@@ -20,21 +20,21 @@
 
       <table class="table">
         <tr>
-          <td colspan="2">The Red Mountain T-shirt</td>
+          <td colspan="2" class="killerfont">The Red Mountain T-shirt</td>
         </tr>
         <tr>
           <td><img src="images/front_shirt.jpg" class="merchimg" alt="Front of The Red Mountain T-Shirt" width="500px"></td>
           <td><img src="images/back_shirt.jpg" class="merchimg" alt="Back of The Red Mountain T-Shirt" width="500px"></td>
         </tr>
         <tr>
-          <td colspan="2">The Red Mountain Snapback Hat</td>
+          <td colspan="2" class="killerfont">The Red Mountain Snapback Hat</td>
         </tr>
         <tr>
           <td><img src="images/r-hat_shirt.jpg" class="merchimg" alt="Red snapback hat & T-shirt" width="500px"></td>
           <td><img src="images/r-hat.jpg" class="merchimg" alt="Red snapback hat" width="500px"></td>
         </tr>
         <tr>
-          <td colspan="2">The Red Mountain Koozie</td>
+          <td colspan="2" class="killerfont">The Red Mountain Koozie</td>
         </tr>
         <tr>
           <td colspan="2"><img src="images/r-can_holder.jpg" class="merchimg" alt="Red Koozie" width="500px" class="table"><img src="images/b-can_holder.jpg" alt="Black koozie" width="500px" height="282px" ></td>
@@ -42,7 +42,6 @@
       </table>
       <br>
         <a href="https://www.facebook.com/THEREDMOUNTAIN/shop/?referral_code=page_shop_tab&preview=1" target="_blank" id="buy" class="center"><img src="images/button_buy-here.png" alt="buy button"></a>
-        <p class="centertext">The above link will send you to a external website</p>
-      <br>
+        <p class="warning">External Link</p>
       </body>
 </html>
