--- a/upcoming.htm
+++ b/upcoming.htm
@@ -20,6 +20,6 @@
     <body>
         <br>
         <img src="images/show.jpg" id="poster" class="center" alt="poster for upcoming shows"><br>
-        <p>Want to book The Red Mountain <strong class="altfont">?</strong> <a href="contact.htm">Contact Us</a></p>
+        <p id="contact">Want to book The Red Mountain? <a href="contact.htm">Contact Us</a></p>
     </body>
     </html>
