--- a/contact.htm
+++ b/contact.htm
@@ -28,6 +28,6 @@
             
         <a href="https://twitter.com/THEREDMOUNTAIN1" target="_blank"><img src="images/twitter.png" class="contactimg"></a>
 
-        <p class="warning">External Links above</p>
+        <p class="warning">External Links</p>
     </body>
 </html>
