--- a/listennow.htm
+++ b/listennow.htm
@@ -35,6 +35,6 @@
 
         <a href="https://www.iheart.com/artist/the-red-mountain-33260879/albums/alpha-169247169/?autoplay=true" target="_blank"><img src="images/iheart.png" class="musicimg" alt="Iheart radio music link"></a>
 
-        <p class="warning">External Links above</p>
+        <p class="warning">External Links</p>
     </body>
 </html>
