--- a/index.htm
+++ b/index.htm
@@ -18,11 +18,8 @@
         </ul>
         
     <body>
-        <p class="killerfont">Welcome to THE RED MOUNTAIN website<br> learn more about the band  <a href="about.htm">here.</a></p>
-        <video class="center" width="885" height="498" controls autoplay muted>
-            <source src="video/yt5s.io-THE RED MOUNTAIN - THE RED MOUNTAIN.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-
+        <p class="killerfont" id="bigtext">We are THE RED MOUNTAIN, from the multiverse.</p>
+        <iframe width="885" height="498" class="center" src="https://www.youtube.com/embed/n9qBY4SEvtU" title="THE RED MOUNTAIN - THE RED MOUNTAIN" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Video Error</iframe>
+        <p class="killerfont">"We built the mountain, Stone by Stone."</p>
     </body>
 </html>
