--- a/contact.htm
+++ b/contact.htm
@@ -9,17 +9,18 @@
         <!--Need to find a way to keep the image the same throughout the website-->
     </header>
  
-        <ul class="breadcrumb">
-            <li><a href="about.htm"><img src="images/button_about-us.png" alt="About Us button"></a></li>
-            <li><a href="merch.htm"><img src="images/button_merch.png" alt="Merchandise button"></a></li>
-            <li><a href="listennow.htm"><img src="images/button_listen-now.png" alt="Listen Now button"></a></li>    
-            <li><a href="upcoming.htm"><img src="images/button_upcoming-shows.png" alt="Uppcoming Shows button"></a></li>
-            <li><a href="contact.htm"><img src="images/button_contact-us.png" alt="Contact Us button"></a></li>
-        </ul>
+    <ul class="breadcrumb">
+        <li><a href="about.htm"><img src="images/button_about-us (1).png" alt="About Us button" class="nav"></a></li>
+        <li><a href="merch.htm"><img src="images/button_merch (1).png" alt="Merchandise button" class="nav"></a></li>
+        <li><a href="listennow.htm"><img src="images/button_listen-now (1).png" alt="Listen Now button" class="nav"></a></li>    
+        <li><a href="upcoming.htm"><img src="images/button_upcoming-shows (1).png" alt="Uppcoming Shows button" class="nav"></a></li>
+        <li><a href="contact.htm"><img src="images/button_contact-us (1).png" alt="Contact Us button" class="nav"></a></li>
+    </ul>
         
     <body>
-        <p class="killerfont">Follow or Contact Us<strong class="norsefont">!</strong> <br> On you Favorite platform below</p>
-        <img src="images/red-down-arrow.png" id="arrow"><br><br><br><br>
+        <br>
+        <p class="blkdrop">Follow or Contact Us<strong class="norsefont">!</strong> <br> On you Favorite platform below<br><br>
+        <img src="images/red-down-arrow.png" id="arrow" class="blkdrop"></p><br><br>
 
         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=theredmountainxroads@gmail.com" target="_blank"><img src="images/email.png" class="contactimgl"></a> <!--theredmountainxroads@gmail.com--> 
         <a href="https://www.facebook.com/THEREDMOUNTAIN" target="_blank"><img src="images/facebook.png" class="contactimg"></a>
