--- a/merch.htm
+++ b/merch.htm
@@ -10,13 +10,13 @@
     </header>
     
  
-        <ul class="breadcrumb">
-            <li><a href="about.htm"><img src="images/button_about-us.png" alt="About Us button"></a></li>
-            <li><a href="merch.htm"><img src="images/button_merch.png" alt="Merchandise button"></a></li>
-            <li><a href="listennow.htm"><img src="images/button_listen-now.png" alt="Listen Now button"></a></li>    
-            <li><a href="upcoming.htm"><img src="images/button_upcoming-shows.png" alt="Uppcoming Shows button"></a></li>
-            <li><a href="contact.htm"><img src="images/button_contact-us.png" alt="Contact Us button"></a></li>
-        </ul>
+    <ul class="breadcrumb">
+      <li><a href="about.htm"><img src="images/button_about-us (1).png" alt="About Us button" class="nav"></a></li>
+      <li><a href="merch.htm"><img src="images/button_merch (1).png" alt="Merchandise button" class="nav"></a></li>
+      <li><a href="listennow.htm"><img src="images/button_listen-now (1).png" alt="Listen Now button" class="nav"></a></li>    
+      <li><a href="upcoming.htm"><img src="images/button_upcoming-shows (1).png" alt="Uppcoming Shows button" class="nav"></a></li>
+      <li><a href="contact.htm"><img src="images/button_contact-us (1).png" alt="Contact Us button" class="nav"></a></li>
+  </ul>
 
       <table class="table">
         <tr>
