--- a/upcoming.htm
+++ b/upcoming.htm
@@ -2,7 +2,7 @@
 <html>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>The Red Mountain - Home</title>
+    <title>The Red Mountain - Upcoming Shows</title>
     
     <header>
         <a  href="index.htm"><img src="images/trans_logo_crop.png" class="logo"></a>
