--- a/merch.htm
+++ b/merch.htm
@@ -2,7 +2,7 @@
 <html>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>The Red Mountain - Home</title>
+    <title>The Red Mountain - Merch</title>
     
     <header>
         <a  href="index.htm"><img src="images/trans_logo_crop.png" class="logo"></a>
@@ -41,7 +41,7 @@
         </tr>
       </table>
       <br>
-        <a href="https://www.facebook.com/THEREDMOUNTAIN/shop/?referral_code=page_shop_tab&preview=1" target="_blank" id="buy" class="center"><img src="images/button_buy-here.png" alt="buy button"></a>
+        <a href="https://www.facebook.com/THEREDMOUNTAIN/shop/?referral_code=page_shop_tab&preview=1" target="_blank" id="buy" class="center"><img src="images/button_buy-here (1).png" alt="buy button"></a>
         <p class="warning">External Link</p>
       </body>
 </html>
