--- a/contact.htm
+++ b/contact.htm
@@ -19,7 +19,7 @@
         
     <body>
         <br>
-        <p class="blkdrop">Follow or Contact Us<strong class="norsefont">!</strong> <br> On you Favorite platform below<br><br>
+        <p class="blkdrop">Follow or Contact Us<strong class="norsefont">!</strong> <br> On your Favorite platform below<br><br>
         <img src="images/red-down-arrow.png" id="arrow" class="blkdrop"></p><br><br>
 
         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=theredmountainxroads@gmail.com" target="_blank"><img src="images/email.png" class="contactimgl"></a> <!--theredmountainxroads@gmail.com--> 
